<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.2</version>
    <relativePath/>
  </parent>

  <groupId>com.rodrigobarbosa</groupId>
  <artifactId>order-menu-services</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>order-menu-services</name>

  <properties>
    <java.version>21</java.version>

    <!-- For Spring Boot 4.x, use springdoc 3.x -->
    <springdoc.version>3.0.1</springdoc.version>

    <!-- Spotless (formatter) -->
    <spotless.version>2.44.3</spotless.version>
    <googleJavaFormat.version>1.23.0</googleJavaFormat.version>
  </properties>

  <modules>
    <module>services/menu</module>
    <module>services/order</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <configuration>
          <!-- Java formatting -->
          <java>
            <googleJavaFormat>
              <version>${googleJavaFormat.version}</version>
            </googleJavaFormat>
            <importOrder />
            <removeUnusedImports/>
          </java>
          <!-- Non-Java files: make these match .editorconfig defaults -->
          <formats>
            <format>
              <includes>
                <include>**/*.md</include>
                <include>**/*.yml</include>
                <include>**/*.yaml</include>
                <include>**/*.json</include>
                <include>**/*.xml</include>
                <include>**/pom.xml</include>
                <include>.editorconfig</include>
                <include>.gitignore</include>
              </includes>
              <trimTrailingWhitespace/>
              <endWithNewline/>
            </format>
          </formats>
        </configuration>

        <executions>
          <!-- Enforce formatting as part of `mvn verify` -->
          <execution>
            <id>spotless-check</id>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
